[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Dynamic Fonts/Title.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Early GameBoy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_right = 0.3
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MenuContainer"]
margin_top = 185.0
margin_right = 412.0
margin_bottom = 295.0
custom_fonts/font = ExtResource( 1 )
text = "Binding of Josee"
align = 1

[node name="Start" type="Button" parent="MenuContainer"]
margin_top = 299.0
margin_right = 412.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true

[node name="Edit" type="Button" parent="MenuContainer"]
margin_top = 339.0
margin_right = 412.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 1 )
text = "Edit"
flat = true

[node name="Quit" type="Button" parent="MenuContainer"]
margin_top = 379.0
margin_right = 412.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
[connection signal="pressed" from="MenuContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MenuContainer/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="MenuContainer/Quit" to="." method="_on_Quit_pressed"]
